--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "start": "tsc && node --unhandled-rejections=strict ./dist/app.js",
     "debug": "export DEBUG=* && npm run start",
-    "windowsDebug": "@powershell -Command $env:DEBUG='*';npm run start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "debug-windows": "@powershell -Command $env:DEBUG='*';npm run start",
+    "test": "mocha -r ts-node/register 'test/**/*.test.ts' --unhandled-rejections=strict",
+    "test-debug": "export DEBUG=* && npm test",
+    "test-debug-windows": "@powershell -Command $env:DEBUG='*'; npm test"
   },
   "author": "Gizmodo",
   "license": "MIT",
@@ -15,17 +17,31 @@
     "argon2": "^0.30.3",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "express-winston": "^4.2.0",
+    "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.10.0",
     "shortid": "^2.2.16",
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@types/argon2": "^0.15.0",
+    "@types/chai": "^4.3.4",
     "@types/cors": "^2.8.13",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/mocha": "^10.0.1",
     "@types/shortid": "^0.0.29",
+    "@types/supertest": "^2.0.12",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
     "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^4.9.5"
   }
